# vibe_golf

./: Cargo.toml  README.md  architecture.md  commit_numstat.txt  convert_mp3_to_ogg.ps1  dev_history_full.txt  dev_history_raw.txt  development_history.md  game_design.md  high_score_time.txt  optimization_stories.md  stories.md  vibe_golf.js
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
assets/levels/: level1.ron
assets/models/: candy_1.glb  candy_2.glb  ducky.glb  meatball.glb  tree_1.glb  tree_2.glb
assets/shaders/: contour.wgsl  contour_ext.wgsl  terrain_pbr_ext.wgsl  water.wgsl
src/: lib.rs  main.rs  prelude.rs  screenshot.rs
src/plugins/: autoplay.rs  ball.rs  camera.rs  contour_material.rs  core_sim.rs  debug_scene.rs  game_audio.rs  game_state.rs  hud.rs  level.rs  main_menu.rs  particles.rs  performance_menu.rs  scene.rs  shooting.rs  target.rs  terrain.rs  terrain_graph.rs  terrain_material.rs  vegetation.rs
tests/: fixed_tick.rs
web/: index.html  vibe_golf.js
web/assets/models/: candy_2.glb
web/assets/shaders/: terrain_pbr_ext.wgsl
