[package]
name = "vibe_golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_pbr", "bevy_audio", "png", "hdr", "mp3"] }
bevy_rapier3d = { version = "0.27", default-features = true }
noise = "0.8"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
futures-lite = "2"
