[package]
name = "vibe_golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["bevy_asset", "bevy_winit", "bevy_render", "bevy_pbr", "bevy_audio", "png", "hdr", "mp3"] }
noise = "0.8"
rand = "0.8"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["png"] }
futures-lite = "2"
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_rapier3d = { version = "0.27", default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_rapier3d = { version = "0.27", default-features = false, features = ["dim3", "serde-serialize", "wasm-bindgen"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
